# loopy

./: Makefile.in  README.txt  configure  configure-opencl.sh  configure.ac  do.sh  recompile.sh  script.sh  tests.h
config/: common.mk.in
doc/: Makefile.in
src/: Makefile.am  Makefile.in
src/common/: Algorithm.cpp  Algorithm.h  AlgorithmFactory.cpp  AlgorithmFactory.h  Makefile.am  Makefile.in  NumberGenerator.cpp  NumberGenerator.h  ResultDatabase.cpp  Verify.h  tests.h
src/cuda/: Makefile.am  Makefile.in
src/cuda/common/: CudaEngine.h  CudaKernelsExecution.h
src/cuda/level0/: BusSpeedDownload  BusSpeedReadback  DeviceMemory  Makefile.am  Makefile.in  MaxFlops
src/cuda/level1/: Makefile.in
src/cuda/level1/md/: MD  (+1 more)
src/cuda/level2/: Makefile.in
src/cuda/level3/: AlgToCode  AlgToCode.cu  Makefile.am  Makefile.in
src/cuda/level3/Algs/: CudaKernelExecution.h  TestS2VfloatD256Form1MUnrol0U0LM0SEQ.h  TestS2VfloatD256Form1MUnrol0U0LM1SEQ.h  TestS2VfloatD256Form1MUnrol0U16LM0SEQ.h  TestS2VfloatD256Form1MUnrol0U16LM1SEQ.h  TestS2VfloatD256Form1MUnrol0U8LM0SEQ.h  TestS2VfloatD256Form1MUnrol0U8LM1SEQ.h  TestS2VfloatD256Form1MUnrol1U0LM0RAND.h  TestS2VfloatD256Form1MUnrol1U0LM0SEQ.h  TestS2VfloatD256Form1MUnrol1U0LM1RAND.h  TestS2VfloatD256Form1MUnrol1U0LM1SEQ.h  TestS2VfloatD512Form1MUnrol0U0LM0SEQ.h  TestS2VfloatD512Form1MUnrol0U0LM1SEQ.h  TestS2VfloatD512Form1MUnrol0U16LM0SEQ.h  TestS2VfloatD512Form1MUnrol0U16LM1SEQ.h  TestS2VfloatD512Form1MUnrol0U8LM0SEQ.h  TestS2VfloatD512Form1MUnrol0U8LM1SEQ.h  TestS2VfloatD512Form1MUnrol1U0LM0RAND.h  TestS2VfloatD512Form1MUnrol1U0LM0SEQ.h  TestS2VfloatD512Form1MUnrol1U0LM1RAND.h  TestS2VfloatD512Form1MUnrol1U0LM1SEQ.h  TestS4VfloatD256Form1MUnrol0U0LM0SEQ.h  TestS4VfloatD256Form1MUnrol0U0LM1SEQ.h  TestS4VfloatD256Form1MUnrol0U16LM0SEQ.h  TestS4VfloatD256Form1MUnrol0U16LM1SEQ.h  TestS4VfloatD256Form1MUnrol0U8LM0SEQ.h  TestS4VfloatD256Form1MUnrol0U8LM1SEQ.h  TestS4VfloatD256Form1MUnrol1U0LM0RAND.h  TestS4VfloatD256Form1MUnrol1U0LM0SEQ.h  TestS4VfloatD256Form1MUnrol1U0LM1RAND.h  TestS4VfloatD256Form1MUnrol1U0LM1SEQ.h  TestS4VfloatD512Form1MUnrol0U0LM0SEQ.h  TestS4VfloatD512Form1MUnrol0U0LM1SEQ.h  TestS4VfloatD512Form1MUnrol0U16LM0SEQ.h  TestS4VfloatD512Form1MUnrol0U16LM1SEQ.h  TestS4VfloatD512Form1MUnrol0U8LM0SEQ.h  TestS4VfloatD512Form1MUnrol0U8LM1SEQ.h  TestS4VfloatD512Form1MUnrol1U0LM0RAND.h  TestS4VfloatD512Form1MUnrol1U0LM0SEQ.h  TestS4VfloatD512Form1MUnrol1U0LM1RAND.h  (+1 more)
src/cuda/level3/Algs/GAP0-FloatParam-DepDegree1/: kernelWGSXMAPIXLLXOPS1024.h  kernelWGSXMAPIXLLXOPS128.h  kernelWGSXMAPIXLLXOPS16.h  kernelWGSXMAPIXLLXOPS16.ptx  kernelWGSXMAPIXLLXOPS256.h  kernelWGSXMAPIXLLXOPS32.h  kernelWGSXMAPIXLLXOPS32.ptx  kernelWGSXMAPIXLLXOPS512.h  kernelWGSXMAPIXLLXOPS64.h  kernelWGSXMAPIXLLXOPS8.h  kernelWGSXMAPIXLLXOPS8.ptx
src/mpi/: Makefile.in
src/mpi/common/: Makefile.in
src/mpi/contention/: Makefile.in
src/mpi/contention-mt/: Makefile.in
src/opencl/: Makefile.am  Makefile.in
src/opencl/PolyBench/: 2mm.cl  2mm.cpp  FloydWarshall.cl  FloydWarshall.cpp  Makefile.am  RegDetect.cl  RegDetect.cpp  doitgen-alt1.cl  doitgen.cl  doitgen.cpp  mm1-alt1.cl  mm1.cl  mm1.cpp  mm2.cl  mm2.cpp  reg-detect.cl
src/opencl/TSVC/: Makefile.am  S000.cl  S000.cpp  S000.pseudo  S111-alt1.cl  S111.cl  S111.cpp  S111.pseudo  S1111.cl  S1111.cpp  S1111.pseudo  S1112.cl  S1112.cpp  S1112.pseudo  S1119-2.cl  S1119-3.cl  S1119-4.cl  S1119-4LOWMEM.cl  S1119-v2.cl  S1119.cl  S1119.cpp  S1119LOWMEM.cl  S112.cl  S112.cpp  S112.pseudo  S113.cl  S113.cpp  S113.pseudo  S118.cl  S118.cpp  S119-2LOWMEM.cl  S119-5LOWMEM.cl  S119-wavefront.cl  S119-wavefront.cpp  S119.cl  S119.cpp  S119LOWMEM.cl  S119NOMEM.cl  S119_v2.cl  S122.cl  (+52 more)
src/opencl/TSVC/IntraDimensionDependency/: Makefile.am  Makefile.in  funcs.h
src/opencl/TSVC/IntraDimensionDependency/FPGA_NDRANGE/: IntraDimensionDependency.cl  constants.h
src/opencl/TSVC/IntraDimensionDependency/FPGA_SINGLE/: IntraDimensionDependency  IntraDimensionDependency.cl  IntraDimensionDependency.cpp  Makefile.in  PE.cl  PE_acc.cl  controller.cl  memReadData.cl  memReadWeight.cl  memWrite.cl
src/opencl/TSVC/IntraDimensionDependency/FPGA_SINGLE/bin-emu/: IntraDimensionDependency-int.aoco  IntraDimensionDependency-int.aocr
src/opencl/TSVC/IntraDimensionDependency/FPGA_SINGLE/bin-emu/IntraDimensionDependency-int/: IntraDimensionDependency.bc  sys_description.legend.txt  sys_description.txt
src/opencl/TSVC/IntraDimensionDependency/GPU/: IntraDimensionDependency  IntraDimensionDependency.cl  IntraDimensionDependency.cpp  Makefile.am  Makefile.in
src/opencl/common/: AlgorithmType.h  Event.cpp  ExecutionConfig.h  Makefile.am  Makefile.in  OpenCLEngine.cpp  OpenCLEngine.h  Scatter.cpp  aocl_utils.h  opencl.cpp  opencl.h  options.cpp  options.h  scoped_ptrs.h  support.h  tests.h
src/opencl/idioms/: Makefile.am  Makefile.in  Random.cl  Random.cpp  Random2.cl  Random3.cl  Reduction.cl  Reduction.cpp  Scatter.cl  Scatter2.cl  Scatter3.cl  Stream  Stream.cl  Stream.cpp  Stream2.cl  Stream3.cl  Transpose.cl  Transpose.cpp  Transpose3.cl
src/opencl/level0/: BusSpeedDownload  BusSpeedReadback  DeviceMemory  KernelCompile  Makefile.in  MaxFlops  MaxFlops.cpp  QueueDelay  maxFlopsResult  maxFlopsResult2
src/opencl/level1/: Makefile.in
src/opencl/level2/: Makefile.in
src/opencl/level3/: AlgToCode.cpp  AlgToCodeCUs.cpp  AlgToCodeDepDegree.cpp  AlgToCodeDepDegreeST.cpp  AlgToCodeInterleaving.cpp  AlgToCodeInterleaving2.cpp  AlgToCodeMatrixMultiplicationPipeline.cpp  AlgToCodeMatrixMultiplicationPipelineFPGA.cpp  AlgToCodeOps.cpp  AlgToCodeTwoLoops.cpp  AlgToCodeUnfolding.cpp  AlgToCodeUnfolding2.cpp  AlgToCodeUnfolding3.cpp  AlgToCodeUnrollTest.cpp  AlgTypeGeneration.cpp  Flops  Flops.cpp  Makefile.am  Makefile.in  PerfMeasure.cpp
src/opencl/level3/FlopsFolder/: flops.cl
src/openmp/: AntiDependent.h  ConditionalDependent.h  HalfParallelHalfDependent.h  IntraDimensionDependent.h  funcs.h  tests  tests.cpp
src/stability/: Makefile.in  Stability
src/stability/epmpi/: Makefile.in  Stability_mpi
tools/: Makefile.in
(+147 files in other folders)
